@@ -4,7 +4,7 @@
 </p>
 <p>
   <b>Tipo do apartamento:</b>
-  <%=h TiposApartamento.find(@apartamento.fkTiposApartamentos).nome %>
+  <%=h TiposApartamento.find(@apartamento.tiposApartamento_id).nome %>
 </p>
 <p>
   <b>Status:</b>
