@@ -1,4 +1,11 @@
 2009-05-26 Suzana Matos <suzana.matos@gmail.com>
+* view/contas/encerrar : tried to do.... but it's not working and i don't know how
+to do
+* createTable : change all fk* to *_id
+	- and almost all files was changed because os this
+* define encerrar method
+
+2009-05-26 Suzana Matos <suzana.matos@gmail.com>
 * db/createTable.sql : 
 	- added lotação in tipos_apartamentos
 	- created contas_encerradas
